--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.5.0",
     "react-dom": "^16.12.0",
+    "react-ga": "^3.3.0",
     "react-icons": "^4.2.0",
     "react-loading-overlay": "^1.0.1",
     "react-localization": "^1.0.13",
